TM-5000 Fixed issue with the person details dialog sometimes displaying behind its parent dialog
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@7218 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/elements/general/dialog.sass
+++ b/web-app/css/elements/general/dialog.sass
@@ -30,3 +30,6 @@ div.modal-dialog
         font-weight: bold !important
         line-height: inherit !important
         font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif !important
+
+div.ui-front
+	z-index: 1050
